feat: add user.search with explain
