# src/users/dto/search.dto.ts
@@ -1,0 +1,8 @@
+import { IsString } from 'class-validator';
+
+export class UserSearchRequest {
+    @IsString()
+    first_name: string;
+    @IsString()
+    second_name: string;
+}
