# src/users/users.controller.ts
@@ -1,10 +1,11 @@
 import { ApiException } from '@nanogiants/nestjs-swagger-api-exception-decorator';
-import { BadRequestException, Body, Controller, Get, Param, Post } from '@nestjs/common';
+import { BadRequestException, Body, Controller, Get, Param, Post, Query } from '@nestjs/common';
 
 import { ApiOperation, ApiParam } from '@nestjs/swagger';
 import { UserGuard } from '../auth/user-guard.service';
 import { User } from './user.entity';
 import { UsersService } from './users.service';
+import { UserSearchRequest } from './dto';
 
 // @UseGuards(B2bGuard)
 @Controller({
@@ -20,6 +21,14 @@ export class UsersController {
     @Get('get/:id')
     public async get(@Param() { id }: { id: string }) {
         return this.service.findOne(id);
+    }
+
+    @UserGuard()
+    @ApiOperation({ summary: 'Search user by first_name and last_name' })
+    @ApiException(() => [BadRequestException])
+    @Get('search')
+    public async search(@Query() request: UserSearchRequest) {
+        return this.service.search(request);
     }
 
     @ApiOperation({ summary: 'Register new user' })
